[workspace]
members = ["lib/testrepository_repository"]
resolver = "2"

[workspace.package]
authors = []
description = "A repository of test results"
edition = "2021"
license = "Apache-2.0 OR BSD-3-Clause"
publish = false                              # Until ready
version = "0.1.0"

[workspace.dependencies]
eyre = "0.6.5"
testrepository_repository = { path = "lib/testrepository_repository" }
thiserror = "1.0.42"
tokio = { version = "1.38.1", default-features = false, features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "test-util",
    "time",
] }
tokio-test = "0.4.4"
tracing = "0.1.27"
tracing-test = "0.2.5"
url = "2.5.2"
