[workspace]
members = ["lib/testrepository_repository"]
resolver = "2"

[workspace.package]
authors = []
description = "A repository of test results"
edition = "2021"
license = "Apache-2.0 OR BSD-3-Clause"
publish = false                              # Until ready
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1.81"
eyre = "0.6.5"
fs_at = "0.2.1"
futures = "0.3.30"
libc = "0.2.147"
tempfile = "3.10.1"
test-case = "3.3.1"
testrepository_repository = { path = "lib/testrepository_repository" }
thiserror = "1.0.42"
tokio = { version = "1.38.1", default-features = false, features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "test-util",
    "time",
] }
tokio-test = "0.4.4"
tracing = "0.1.27"
tracing-test = "0.2.5"
url = "2.5.2"
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Kernel",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
] }
