[package]
description = "The repository layer for testrepository"
name = "testrepository_repository"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
eyre.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
tokio-test.workspace = true
