[package]
description = "The repository layer for testrepository"
name = "testrepository_repository"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
eyre.workspace = true
fs_at.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
tracing-test.workspace = true

[target.'cfg(windows)'.dependencies.windows-sys]
workspace = true

[target.'cfg(not(windows))'.dependencies]
libc.workspace = true
